--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "_project_webadv",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
